Appointement start timer update
